# amdnpu-ps1p

./: .gitignore  .pr_agent.toml  LICENSE  README.md  setup.cfg  setup.py
data/: PATCH_README.md  gate_disassembly.txt  isa_analysis.md  npu_patched.sbin  npu_patched_original_hash.sbin  patch_report.txt  serialization_stack.md  ve2_init_sequence.md
docs/superpowers/plans/: 2025-06-29-ipu-firmware-re-toolchain.md  2025-06-29-npu-re-next-phase.md  2025-06-29-ps1p-container-package.md  2025-06-29-strix-halo-npu-ve2-firmware-isa-remap.md
ps1p/: __init__.py  blob.py  cli.py  container.py  header.py  partition.py
ps1p/tests/: conftest.py  test_blob.py  test_cli.py  test_container.py  test_header.py  test_partition.py
tools/: __init__.py  aie2_config_extractor.py  analyze_gate.py  build_opcode_map.py  decrypt_ipu_fw.py  deploy_patch.sh  extract_ipu_fw.py  find_serialization_gate.py  fw_deploy.py  ipu_disasm.py  ipu_disasm_test.py  ipu_disasm_v2.py  npu_concurrent_test  npu_concurrent_test.c  npu_runtime_info.py  npu_stress_test.py  npu_ve2_init  npu_ve2_init.c  npu_xclbin_inspector.py  npu_xrt_test  npu_xrt_test.cpp  patch_serialization_gate.py  sub_payload_parser.py
