[metadata]
name = ps1p
version = 0.1.0
description = AMD NPU $PS1p firmware container parser/extractor
long_description = file: README.md
long_description_content_type = text/markdown
author = NPU RE Team

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
include = ps1p, ps1p.*, ps1p.tests
